# sixx-fs

./: Cargo.toml  README.md  Rustfmt.toml
src/: log.rs  main.rs  scan.rs  ui.rs
src/scan/: file_info.rs  file_item.rs  file_times.rs  specific_info.rs
src/ui/: base.rs  consts.rs  file_view.rs  scan_view.rs
