[package]
name = "sixx-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.7.2"
chrono = "0.4.41"
ez-ffmpeg = "0.5.4"
fern = { version = "0.7.1", features = ["colored"] }
iced = { git = "https://github.com/iced-rs/iced.git", rev = "refs/pull/2723/head" }
log = "0.4.28"
md5 = "0.8.0"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
trie-rs = "0.4.2"
